--- a/src/pages/request-approval/components/request-details/style.css
+++ b/src/pages/request-approval/components/request-details/style.css
@@ -68,7 +68,7 @@
   display: none;
 }
 
-@media (min-width: 980px) {
+@media (min-width: 480px) {
   .renewal-annual-cost__row {
     display: flex;
   }
@@ -122,4 +122,9 @@
   color: var(--col-primary-warning);
   font-weight: 500;
   padding: 1rem 0;
+}
+
+.file-extension-icon {
+  width: 1rem;
+  margin-right: 0.3rem;
 }
